# etherface

./: .env-EXAMPLE  .gitignore  Cargo.toml  README.md  diesel.toml  docker-compose.yml  etherface-EXAMPLE.toml  rustfmt.toml  smart_corpus_contracts.txt
etherface/: Cargo.toml
etherface-lib/: Cargo.toml
etherface-lib/src/: config.rs  error.rs  lib.rs  model.rs  parser.rs
etherface-lib/src/api/: etherscan.rs  fourbyte.rs  github.rs  mod.rs
etherface-lib/src/api/github/: page.rs  token.rs
etherface-lib/src/api/github/handler/: mod.rs  repos.rs  repositories.rs  search.rs  user.rs  users.rs
etherface-lib/src/database/: mod.rs  pagination.rs  schema.rs
etherface-lib/src/database/handler/: etherscan_contract.rs  github_crawler_metadata.rs  github_repository.rs  github_user.rs  mapping_signature_etherscan.rs  mapping_signature_fourbyte.rs  mapping_signature_github.rs  mapping_stargazer.rs  mod.rs  rest.rs  signature.rs
etherface-rest/: Cargo.toml
etherface-rest/src/: main.rs  v1.rs
etherface-ui/: .env  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
etherface-ui/components/: Alert.tsx  Layout.tsx  LinkItem.tsx  Navbar.tsx  NavbarItem.tsx  Paragraph.tsx  SearchBar.tsx  Table.tsx
etherface-ui/lib/: types.tsx
etherface-ui/pages/: _app.tsx  about.tsx  api-documentation.tsx  hash.tsx  statistics.tsx  text.tsx
etherface-ui/styles/: globals.css
etherface/src/: main.rs
etherface/src/fetcher/: etherscan.rs  fourbyte.rs  github.rs  mod.rs
etherface/src/scraper/: etherscan.rs  github.rs  mod.rs
migrations/2022-03-06-133006_etherface_database/: down.sql  up.sql
migrations/2022-08-01-201536_create_materialized_views/: down.sql  up.sql
migrations/2022-08-13-180338_text_and_hash_search_indexes/: up.sql
res/abi/: 0x000aA88EB998443fBAE7Ce8F2341449971cDBF35.json  0x08c38d80B45E4c1E3A6bECe6B49312E5Fc30B0fb.json  0x0f56768281f0B3F4960e47C3cFB700B667AF2C3e.json  0x123fdb19F2b80bB7cae1F45C6d27549db86F2fD3.json  0x1Ca04599FE3Aa93B5a81623CF9ab642246a1C299.json  0x1F48A86Fea226302DaDAC7574010d8923ce1bFdc.json  0x1a7768F279666C808f3bbBC44955bd87560189B0.json  0x203D619354d9050C8A9890010981Eed460f860EA.json  0x2489349b83d35b366C9C413a66995ab7372D406f.json  0x24Cc4BB5dC3a3caE2dd0a481F1624fB9E537919f.json  0x24eD276f831B18a8dCFfabB3C47EdC29CeBD9948.json  0x26f378E9C3C9E13CeD8F7FFE5c9152c1922596eB.json  0x2C3b0869a5D48970dA6a49fd370F864ec1988066.json  0x3981405e6a473e6D5cf8119ae9a574EA7F5467d6.json  0x3D1c855C7E9C15687D16D4798eeb849f74A10A36.json  0x3D729DE520cAE879cc2A73CB90784B4Ef554CA05.json  0x3ce9CE2F0a82D0F207e2bC8610aa41852A3b1b1b.json  (+70 more)
sql/bigquery/: dump.sh  mk.sh  (+8 more)
(+92 files in other folders)
