[package]
name = "etherface-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "*", features = ["blocking", "json"] }
serde = { version = "*", features = ["derive"] }
chrono = { version = "*", features = ["serde"] }
serde_json = "*"
thiserror = "*"
log = "*"
toml = "*"
url = "*"
hyperx = "1.2.0"
select = "*"
sha3 = "*"
lazy_static = "*"
regex = "*"
dotenv = "0.15.0"

semver = "*"
lenient_semver = "*"

diesel = { version = "1.4", features = ["postgres", "chrono", "r2d2"] }
diesel-derive-enum = { version = "1.1.2", features = ["postgres"] }
