[package]
name = "etherface-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
toml = "0.5"
url = "2.0"
hyperx = "1.0"
select = "0.5"
sha3 = "0.10"
lazy_static = "1.0"
regex = "1.0"
dotenv = "0.15"

semver = "1.0"
lenient_semver = "0.4"

diesel = { version = "1.4.8", features = ["postgres", "chrono", "r2d2"] }
diesel-derive-enum = { version = "1.1.2", features = ["postgres"] }
