[package]
name = "etherface-rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
openssl = { version = "0.10", features = ["v110"] }
etherface-lib = { path = "../etherface-lib" }
serde = { version = "*", features = [] }
serde_json = "*"
actix-cors = "0.6.1"
env_logger = "0.9.0"