[package]
name = "etherface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
etherface-lib = { path = "../etherface-lib" }
anyhow = "1.0.56"
walkdir = "*"

chrono = "*"

simplelog = "0.11.2"
log = "0.4.16"