[package]
name = "etherface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
etherface-lib = { path = "../etherface-lib" }
anyhow = "1.0"
walkdir = "2.0"
chrono = "0.4"
simplelog = "0.11.0"
log = "0.4"